--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ title: "Yuqi Tu"
 
 ### I have a webpage!
 
-Introduction of myself: typing....
+Introduction of myself: typing....please write 
 
 ### have a link
 
